# fzgrep-rs

./: .clippy.toml  Cargo.toml  README.md
.github/workflows/: deploy.yml
resources/tests/: name with spaces.txt  test.json  test.txt  тест.txt  测试.txt  👨‍🔬.txt
resources/tests/nested/: ignore.json  test.txt
resources/tests/top_matches/: 1.txt  2.txt
src/: cli.rs  core.rs  details.rs  exit_code.rs  lib.rs  main.rs  match_properties.rs  matching_results.rs  request.rs
src/cli/: args.rs  error.rs  formatting.rs  formatting_options.rs  mod.rs  option_ids.rs  output.rs  output_options.rs  request.rs  sgr_sequence.rs
src/cli/output/: behavior.rs  formatting.rs  location_ref.rs
src/cli/sgr_sequence/: error.rs  errors.rs
src/cli/sgr_sequence/errors/: style_sequence_parsing_error.rs
src/cli/sgr_sequence/errors/style_sequence_parsing_error/: color_sequence_parsing_error.rs
src/core/: basic.rs  context_accumulators.rs  exit_code.rs  file_filtering.rs  filtering.rs  mod.rs  prospective.rs  prospective_match_properties.rs  reader.rs  request.rs  results_collection.rs  sliding_accumulator.rs
src/core/prospective/: context.rs  match_properties.rs
src/core/prospective/context/: after_context.rs
src/core/prospective/match_properties/: context.rs
src/core/prospective_match_properties/: prospective_context.rs
src/core/prospective_match_properties/prospective_context/: prospective_after_context.rs
src/core/results_collection/: top_bracket.rs
src/details/: basic.rs  prospective.rs  results_collection.rs  sliding_accumulator.rs
src/details/prospective/: context.rs
src/details/prospective/context/: after_context.rs
src/details/results_collection/: top_bracket.rs
src/fuzzy_score/: mod.rs
src/match_properties/: context.rs  location.rs
src/matching_results/: context_accumulators.rs  matching_line.rs  mod.rs  result.rs  result_collection.rs  top_bracket.rs
src/request/: collection_strategy.rs  match_options.rs  targets.rs
src/request/match_options/: context_size.rs
src/request/targets/: filter.rs
tests/: formatting.rs  formatting_options.rs  integration_test.rs  matching.rs  output.rs  recursive_processing.rs  recursive_processing_nix.rs  recursive_processing_win.rs  top_matches.rs
