[package]
name = "fzgrep"
version = "1.1.1"
authors = ["Andrii Semkiv <semkiv@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "4.5.32"
env_logger = "0.11.7"
glob = "0.3.2"
log = "0.4.27"
path-slash = "0.2.1"
vscode-fuzzy-score-rs = { git = "https://github.com/semkiv/vs-code-fuzzy-score-rs.git", tag = "v0.2.8" }
walkdir = "2.5.0"
yansi = "1.0.1"

[dev-dependencies]
tempfile = "3.19.1"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
dbg_macro = "warn"
debug_assert_with_mut_call = "deny"
empty_structs_with_brackets = "warn"
expect_used = "deny"
float_cmp_const = "warn"
mod_module_files = "warn"
redundant_pub_crate = "allow"
shadow_unrelated = "warn"
unwrap_used = "deny"
